--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,33 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+
+}
+
+.balao {
+    padding: 20px;
+    border: 2px solid rgb(134, 60, 158)
+    
+    
+ 
+}
+
+.balao::after{
+
+    width: 25px;
+    height: 25px;
+    display: block;
+    position: absolute;
+    border: 2px solid;
+    border-color: white;
+    border-color: transparent blue blue transparent;
+    transform: rotate(deg);
 }
 
 ul {
