--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
+    background-image: url(../imag/flores.webp);
 
     display: flex;
     flex-direction: column;
