--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
     background-image: url(../imag/flores.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
 
     display: flex;
     flex-direction: column;
